# metal-devices-server

./: .gitmodules  CMakeLists.txt  Procfile  README.mkd  deploy.sh  set_permissions_for_dest.sh  touch_and_permissions_authkeys.sh  touch_and_permissions_upstart.sh
beep_scripts/: CMakeLists.txt  README.md  down  down-progress  up  up-progress
src/: CMakeLists.txt  env.in
ssh_trigger_scripts/: CMakeLists.txt  authorized_keys.in  restart-all-servers  restart-computer
trigger_client/: README.mkd  trigger.vbs
upstart_scripts/: CMakeLists.txt  vrpn-leftglove.conf  vrpn-leftglove.conf.in  vrpn-rightglove.conf  vrpn-rightglove.conf.in  vrpn.conf  vrpn.conf.in
vrpn_configs/: CMakeLists.txt  vrpn-leftserialglove.cfg  vrpn-rightserialglove.cfg  vrpn-wiimote.cfg
